Fixed z-index issue

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -51,7 +51,7 @@ svg {
     right: 0;
     bottom: 0;
     width: var(--layers-width);
-    z-index: 9000;
+    z-index: 1100;
     display: flex;
     flex-direction: column;
 }
